se agrego corazon rojo

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <svg class="w-6 h-6 mr-3" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                     <path d="M12.001 2.001c-5.522 0-10 4.478-10 10s4.478 10 10 10 10-4.478 10-10-4.478-10-10-10zm0 18c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8zm4.846-5.804c-.16-.088-.952-.468-1.1-.52-.148-.052-.255-.078-.363.078-.108.156-.417.52-.51.628-.092.108-.184.118-.34.03-.16-.088-.67-.246-1.275-.787-.47-.417-.788-.934-.876-1.088-.088-.154 0-.237.078-.312.068-.068.154-.156.23-.234.078-.078.104-.13.156-.21-.026-.052-.078-.118-.118-.184-.04-.068-.363-.918-.497-1.258-.134-.34-.27-.294-.363-.294-.092 0-.2-.014-.308-.014s-.28-.014-.427.156c-.148.156-.56 1.76-.237 3.332.32 1.572 1.956 2.604 1.996 2.63.04.026 3.084 1.968 3.738 2.213.654.244 1.05.27 1.428.182.378-.09.952-.39 1.088-.767.134-.378.134-.698.092-.768-.04-.07-.148-.104-.308-.182z"/>
                 </svg>
-                Chatea conmigo por WhatsApp
+                Chatea conmigo por WhatsApp ♥️
             </a>
         </section>
 
